--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_export">Експортиране</string>
     <string name="menu_import">Импортиране</string>
     <string name="menu_submit">Submit restrictions</string>
+    <string name="menu_fetch">Fetch restrictions</string>
     <string name="menu_theme">Смяна на темата</string>
     <string name="menu_pro">Професионална версия</string>
     <string name="menu_about">Относно</string>
