--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_export">Exporta</string>
     <string name="menu_import">Importa</string>
     <string name="menu_submit">Envia restriccions</string>
+    <string name="menu_fetch">Fetch restrictions</string>
     <string name="menu_theme">Canvia tema</string>
     <string name="menu_pro">Versió Pro</string>
     <string name="menu_about">Quant a</string>
