--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_export">Export</string>
     <string name="menu_import">Import</string>
     <string name="menu_submit">Submit restrictions</string>
+    <string name="menu_fetch">Fetch restrictions</string>
     <string name="menu_theme">Změnit téma</string>
     <string name="menu_pro">Pro verze</string>
     <string name="menu_about">O aplikaci</string>
