--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_export">Export der Einst.</string>
     <string name="menu_import">Import der Einst.</string>
     <string name="menu_submit">Einschränkungen speichern</string>
+    <string name="menu_fetch">Fetch restrictions</string>
     <string name="menu_theme">Theme wechseln</string>
     <string name="menu_pro">Pro-Version</string>
     <string name="menu_about">Über XPrivacy</string>
