--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_export">Εξαγωγή</string>
     <string name="menu_import">Εισαγωγή</string>
     <string name="menu_submit">Submit restrictions</string>
+    <string name="menu_fetch">Fetch restrictions</string>
     <string name="menu_theme">Αλλαγή θέματος</string>
     <string name="menu_pro">Έκδοση Pro</string>
     <string name="menu_about">Σχετικά</string>
