--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_export">Exporter</string>
     <string name="menu_import">Importer</string>
     <string name="menu_submit">Envoyer ses restrictions</string>
+    <string name="menu_fetch">Fetch restrictions</string>
     <string name="menu_theme">Changer de thème</string>
     <string name="menu_pro">Version pro</string>
     <string name="menu_about">À propos</string>
