--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_export">ייצא</string>
     <string name="menu_import">ייבא</string>
     <string name="menu_submit">Submit restrictions</string>
+    <string name="menu_fetch">Fetch restrictions</string>
     <string name="menu_theme">שינוי צבעי רקע</string>
     <string name="menu_pro">גירסת Pro</string>
     <string name="menu_about">אודות</string>
