--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_export">Exportálás</string>
     <string name="menu_import">Importálás</string>
     <string name="menu_submit">Submit restrictions</string>
+    <string name="menu_fetch">Fetch restrictions</string>
     <string name="menu_theme">Téma váltás</string>
     <string name="menu_pro">Pro verzió</string>
     <string name="menu_about">Névjegy</string>
