--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_export">エクスポート</string>
     <string name="menu_import">インポート</string>
     <string name="menu_submit">制限状況を投稿</string>
+    <string name="menu_fetch">Fetch restrictions</string>
     <string name="menu_theme">テーマを切り替え</string>
     <string name="menu_pro">Proバージョン</string>
     <string name="menu_about">アプリ情報</string>
