--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_export">Exportuoti parametrus</string>
     <string name="menu_import">Importuoti parametrus</string>
     <string name="menu_submit">Pateikti leidimus</string>
+    <string name="menu_fetch">Fetch restrictions</string>
     <string name="menu_theme">Keisti temą</string>
     <string name="menu_pro">Pro versija aktyvi</string>
     <string name="menu_about">Apie XPrivacy</string>
