--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_export">Exporteer</string>
     <string name="menu_import">Importeer</string>
     <string name="menu_submit">Stuur beperkingen</string>
+    <string name="menu_fetch">Haal beperkingen op</string>
     <string name="menu_theme">Wissel thema</string>
     <string name="menu_pro">Pro versie</string>
     <string name="menu_about">Over</string>
