--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_export">Exporta</string>
     <string name="menu_import">Importa</string>
     <string name="menu_submit">Submit restrictions</string>
+    <string name="menu_fetch">Fetch restrictions</string>
     <string name="menu_theme">Schimba tema</string>
     <string name="menu_pro">Versiunea Pro</string>
     <string name="menu_about">Despre</string>
