--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_export">Экспорт настроек</string>
     <string name="menu_import">Импорт настроек</string>
     <string name="menu_submit">Отправить разрешения</string>
+    <string name="menu_fetch">Fetch restrictions</string>
     <string name="menu_theme">Переключить тему</string>
     <string name="menu_pro">Pro-версия</string>
     <string name="menu_about">О программе</string>
