--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_export">Izvozi</string>
     <string name="menu_import">Uvozi</string>
     <string name="menu_submit">Submit restrictions</string>
+    <string name="menu_fetch">Fetch restrictions</string>
     <string name="menu_theme">Spremeni temo</string>
     <string name="menu_pro">Pro različica</string>
     <string name="menu_about">O programu</string>
