--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_export">Експорт</string>
     <string name="menu_import">Импорт</string>
     <string name="menu_submit">Submit restrictions</string>
+    <string name="menu_fetch">Fetch restrictions</string>
     <string name="menu_theme">Пребаци тему</string>
     <string name="menu_pro">Про верзија</string>
     <string name="menu_about">О</string>
