--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_export">Exportera</string>
     <string name="menu_import">Importera</string>
     <string name="menu_submit">Skicka restriktioner</string>
+    <string name="menu_fetch">Fetch restrictions</string>
     <string name="menu_theme">Byt tema</string>
     <string name="menu_pro">Pro-version</string>
     <string name="menu_about">Om</string>
