--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_export">Ayarları dışa aktar</string>
     <string name="menu_import">Ayarları içe aktar</string>
     <string name="menu_submit">Engellemeleri bildir</string>
+    <string name="menu_fetch">Fetch restrictions</string>
     <string name="menu_theme">Temayı değiştir</string>
     <string name="menu_pro">Pro versiyon</string>
     <string name="menu_about">Hakkında</string>
