--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_export">Xuất</string>
     <string name="menu_import">Nhập</string>
     <string name="menu_submit">Submit restrictions</string>
+    <string name="menu_fetch">Fetch restrictions</string>
     <string name="menu_theme">Đổi giao diện</string>
     <string name="menu_pro">Phiên bản Pro</string>
     <string name="menu_about">Về XPrivacy</string>
