--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="menu_all">All</string>
     <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">Launch</string>
-    <string name="menu_app_settings">Settings</string>
+    <string name="menu_app_settings">App details</string>
     <string name="menu_app_store">Play Store</string>
     <string name="menu_accounts">Select accounts to allow</string>
     <string name="menu_contacts">Select contacts to allow</string>
