--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_theme">Theme wechseln</string>
     <string name="menu_pro">Pro-Version</string>
     <string name="menu_about">Über XPrivacy</string>
+    <string name="menu_help">Help</string>
     <string name="menu_all">Alles</string>
     <string name="menu_clear">Löschen</string>
     <string name="menu_app_launch">Starte App</string>
