--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_theme">Αλλαγή θέματος</string>
     <string name="menu_pro">Έκδοση Pro</string>
     <string name="menu_about">Σχετικά</string>
+    <string name="menu_help">Help</string>
     <string name="menu_all">Όλα</string>
     <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">Εκκίνηση</string>
