--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_theme">Téma váltás</string>
     <string name="menu_pro">Pro verzió</string>
     <string name="menu_about">Névjegy</string>
+    <string name="menu_help">Help</string>
     <string name="menu_all">Minden</string>
     <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">Indítás</string>
