--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_theme">שינוי צבעי רקע</string>
     <string name="menu_pro">גירסת Pro</string>
     <string name="menu_about">אודות</string>
+    <string name="menu_help">Help</string>
     <string name="menu_all">בחר הכול</string>
     <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">הפעל</string>
