--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_theme">テーマを切り替え</string>
     <string name="menu_pro">Proバージョン</string>
     <string name="menu_about">アプリ情報</string>
+    <string name="menu_help">Help</string>
     <string name="menu_all">全て</string>
     <string name="menu_clear">消去</string>
     <string name="menu_app_launch">アプリを起動</string>
