--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_theme">Schimba tema</string>
     <string name="menu_pro">Versiunea Pro</string>
     <string name="menu_about">Despre</string>
+    <string name="menu_help">Help</string>
     <string name="menu_all">Tot</string>
     <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">Launch</string>
