--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_fetch">Stiahnuť obmedzenia</string>
     <string name="menu_pro">Pro verzia</string>
     <string name="menu_about">O aplikácii</string>
+    <string name="menu_help">Help</string>
     <string name="menu_all">Všetko</string>
     <string name="menu_clear">Vyčistiť</string>
     <string name="menu_app_launch">Spustiť</string>
