--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_theme">Byt tema</string>
     <string name="menu_pro">Pro-version</string>
     <string name="menu_about">Om</string>
+    <string name="menu_help">Help</string>
     <string name="menu_all">Alla</string>
     <string name="menu_clear">Rensa</string>
     <string name="menu_app_launch">Starta</string>
