--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_theme">Đổi giao diện</string>
     <string name="menu_pro">Phiên bản Pro</string>
     <string name="menu_about">Về XPrivacy</string>
+    <string name="menu_help">Help</string>
     <string name="menu_all">Tất cả</string>
     <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">Chạy</string>
