--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_theme">切换主题</string>
     <string name="menu_pro">专业版</string>
     <string name="menu_about">关于</string>
+    <string name="menu_help">Help</string>
     <string name="menu_all">全部</string>
     <string name="menu_clear">清除</string>
     <string name="menu_app_launch">启动</string>
