--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_theme">Switch theme</string>
     <string name="menu_pro">Pro version</string>
     <string name="menu_about">About</string>
+    <string name="menu_help">Help</string>
     <string name="menu_all">All</string>
     <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">Launch</string>
