--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -61,6 +61,8 @@
     <string name="restrict_view">Преглед (браузър)</string>
     <string name="title_category">Category:</string>
     <string name="title_restrict">Отбележи за ограничаване:</string>
+    <!-- Do not translate 'choice' -->
+    <string name="title_filters">{0,choice,0#No active filter|1#1 active filter|1&lt;{0} actives filters}</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Геогр. ширина</string>
     <string name="settings_lon">Геогр. дължина</string>
