--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -61,6 +61,8 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_view">Εμφάνιση (browser)</string>
     <string name="title_category">Κατηγορία:</string>
     <string name="title_restrict">Επιλέξτε για περιορισμό:</string>
+    <!-- Do not translate 'choice' -->
+    <string name="title_filters">{0,choice,0#No active filter|1#1 active filter|1&lt;{0} actives filters}</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Γεωγρ. πλάτος</string>
     <string name="settings_lon">Γεωγρ. μήκος</string>
