--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -61,6 +61,8 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_view">Ver (navegador)</string>
     <string name="title_category">Categoría:</string>
     <string name="title_restrict">Selecciona para restringir:</string>
+    <!-- Do not translate 'choice' -->
+    <string name="title_filters">{0,choice,0#No active filter|1#1 active filter|1&lt;{0} actives filters}</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitud</string>
     <string name="settings_lon">Longitud</string>
