--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -61,6 +61,8 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_view">Visualizzazione (browser)</string>
     <string name="title_category">Categoria:</string>
     <string name="title_restrict">Spunta per limitare:</string>
+    <!-- Do not translate 'choice' -->
+    <string name="title_filters">{0,choice,0#No active filter|1#1 active filter|1&lt;{0} actives filters}</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitudine</string>
     <string name="settings_lon">Longitudine</string>
