--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -61,6 +61,8 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="restrict_view">Ver (navegador)</string>
     <string name="title_category">Categoria:</string>
     <string name="title_restrict">Clique para restringir:</string>
+    <!-- Do not translate 'choice' -->
+    <string name="title_filters">{0,choice,0#No active filter|1#1 active filter|1&lt;{0} actives filters}</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
