--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -61,6 +61,8 @@
     <string name="restrict_view">Просмотр (браузер)</string>
     <string name="title_category">Категория:</string>
     <string name="title_restrict">Отметьте приложения:</string>
+    <!-- Do not translate 'choice' -->
+    <string name="title_filters">{0,choice,0#No active filter|1#1 active filter|1&lt;{0} actives filters}</string>
     <string name="settings_serial">Серийный номер</string>
     <string name="settings_lat">Широта</string>
     <string name="settings_lon">Долгота</string>
