--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -61,6 +61,8 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_view">Поглед (браузер)</string>
     <string name="title_category">Категорија:</string>
     <string name="title_restrict">Означи да забраниш:</string>
+    <!-- Do not translate 'choice' -->
+    <string name="title_filters">{0,choice,0#No active filter|1#1 active filter|1&lt;{0} actives filters}</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Ширина</string>
     <string name="settings_lon">Дужина</string>
