--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -14,14 +14,14 @@
     <string name="menu_report">Javi napako</string>
     <string name="menu_export">Izvozi</string>
     <string name="menu_import">Uvozi</string>
-    <string name="menu_submit">Submit restrictions</string>
-    <string name="menu_fetch">Fetch restrictions</string>
+    <string name="menu_submit">Pošlji omejitve</string>
+    <string name="menu_fetch">Prenesi omejitve</string>
     <string name="menu_theme">Spremeni temo</string>
     <string name="menu_pro">Pro različica</string>
     <string name="menu_about">O programu</string>
     <string name="menu_help">Help</string>
     <string name="menu_all">Vse</string>
-    <string name="menu_clear">Clear</string>
+    <string name="menu_clear">Počisti</string>
     <string name="menu_app_launch">Zaženi</string>
     <string name="menu_app_settings">Nastavitve</string>
     <string name="menu_app_store">Trgovina Play</string>
