--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -15,11 +15,11 @@
     <string name="menu_export">エクスポート</string>
     <string name="menu_import">インポート</string>
     <string name="menu_submit">制限状況を投稿</string>
-    <string name="menu_fetch">Fetch restrictions</string>
+    <string name="menu_fetch">制限の読み込み</string>
     <string name="menu_theme">テーマを切り替え</string>
     <string name="menu_pro">Proバージョン</string>
     <string name="menu_about">アプリ情報</string>
-    <string name="menu_help">Help</string>
+    <string name="menu_help">ヘルプ</string>
     <string name="menu_all">全て</string>
     <string name="menu_clear">消去</string>
     <string name="menu_app_launch">アプリを起動</string>
@@ -62,7 +62,7 @@
     <string name="title_category">カテゴリ:</string>
     <string name="title_restrict">チェックで制限:</string>
     <!-- Do not translate 'choice' -->
-    <string name="title_filters">{0,choice,0#No active filter|1#1 active filter|1&lt;{0} actives filters}</string>
+    <string name="title_filters">{0,choice,0#有効なフィルタなし|1#1個の有効なフィルタ|1&lt;{0}個の有効なフィルタ}</string>
     <string name="settings_serial">シリアル番号</string>
     <string name="settings_lat">緯度</string>
     <string name="settings_lon">経度</string>
