--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -61,8 +61,11 @@
     <string name="restrict_view">表示 (ブラウザ)</string>
     <string name="title_category">カテゴリ:</string>
     <string name="title_restrict">チェックで制限:</string>
-    <!-- Do not translate 'choice' -->
-    <string name="title_filters">{0,choice,0#有効なフィルタなし|1#1個の有効なフィルタ|1&lt;{0}個の有効なフィルタ}</string>
+    <string name="title_nofilter">No active filter</string>
+    <plurals name="title_filters">
+        <item quantity="one">1 active filter</item>
+        <item quantity="other">%d actives filters</item>
+    </plurals>
     <string name="settings_serial">シリアル番号</string>
     <string name="settings_lat">緯度</string>
     <string name="settings_lon">経度</string>
