--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -64,7 +64,7 @@
     <string name="title_nofilter">No active filter</string>
     <plurals name="title_filters">
         <item quantity="one">1 active filter</item>
-        <item quantity="other">%d actives filters</item>
+        <item quantity="other">%d active filters</item>
     </plurals>
     <string name="settings_serial">Серийный номер</string>
     <string name="settings_lat">Широта</string>
