--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -64,7 +64,7 @@ Det är emellertid omöjligt att garantera att appen fungerar på alla enheter o
     <string name="title_nofilter">No active filter</string>
     <plurals name="title_filters">
         <item quantity="one">1 active filter</item>
-        <item quantity="other">%d actives filters</item>
+        <item quantity="other">%d active filters</item>
     </plurals>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitud</string>
